
2000-09-25	Joel Sherrill <joel@OARcorp.com>

	* rtems/system.h: Switched a29k and hppa1.1 to using cpuopts.h not
	targopts.h to reduce dependency on BSP.

2000-09-20	Joel Sherrill <joel@OARcorp.com>

	* src/objectgetbyindex.c: Do not enable dispatching on an
	error path it was not disabled on.

2000-09-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/Makefile.am: Include compile.am.

2000-08-30	Joel Sherrill <joel@OARcorp.com>

	* Many files: Moved posix/include/rtems/posix/seterr.h to 
	score/include/rtems/seterr.h so it would be available within
	all APIs.

2000-08-17	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/rtems/system.h: Include cpuopts.h for __i386__.

2000-08-10	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.